# xsvg

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Plan.md  README.md  Research.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: screenshot.sh
assets/fonts/: README.md
crates/gradient/: Cargo.toml  README.md
crates/gradient/examples/: bench_fit.rs
crates/gradient/src/: base64.rs  color.rs  contour.rs  coons.rs  emit.rs  field.rs  lib.rs  mesh.rs  png.rs
crates/xsvg-cli/: Cargo.toml  README.md
crates/xsvg-cli/src/: fonts.rs  main.rs  platform.rs
crates/xsvg-compile/: Cargo.toml
crates/xsvg-compile/src/: lib.rs
crates/xsvg-compile/tests/: passthrough.rs
crates/xsvg-core/: Cargo.toml
crates/xsvg-core/examples/: kurbo_simplify_repro.rs
crates/xsvg-core/src/: boolean.rs  compile.rs  filter.rs  lib.rs  offset.rs  test_doubles.rs  warp.rs
crates/xsvg-core/src/compile/: charts.rs  connector.rs  list.rs  mesh.rs  mod.rs  pathops.rs  table.rs  tests.rs
crates/xsvg-core/src/text/: area.rs  fit.rs  measure.rs  mod.rs  outline.rs  region.rs  style.rs  text_area.rs  truncate.rs  wrap.rs
crates/xsvg-core/tests/: passthrough.rs  region.rs  text_area.rs
crates/xsvg-core/tests/fixtures/: arial.json  courier-new.json  georgia.json  regions.json  times-new-roman.json
crates/xsvg-wasm/: Cargo.toml  README.md
crates/xsvg-wasm/src/: lib.rs
crates/xsvg-wasm/tests/: passthrough.rs
dataset/: README.md  adjust.xsvg  alignment.xsvg  aqua.xsvg  architecture.xsvg  artboards.xsvg  badges.xsvg  boolean-refs.xsvg  boolean.xsvg  bordered-text.xsvg  cards.xsvg  chat.xsvg  compose.xsvg  connector-anchors.xsvg  connector-rail-flip.xsvg  connectors.xsvg  degenerate.xsvg  descenders.xsvg  flowchart.xsvg  justify.xsvg  kanban.xsvg  layers.xsvg  letter-spacing.xsvg  lists.xsvg  logo.xsvg  mesh.xsvg  offset.xsvg  outline.xsvg  paragraphs.xsvg  pie.xsvg  pipeline.xsvg  plot.xsvg  region-flow.xsvg  styled-runs.xsvg  table.xsvg  tbreak-and-glyph-scale.xsvg  textarea-align.xsvg  textarea-ellipsis.xsvg  textarea-sizing.xsvg  textarea.xsvg  (+12 more)
docs/: Bench.md  Citations.json  Headless.md  Incremental.md  Paint.md  Plan.md  Research.md  Specification.md  Syntax.md  Transform.md  Typography.md  Vision.md  kurbo-issue-draft.md
scripts/: bump.mjs  compare.mjs  gen-badges.mjs  publish.sh  render-readme.mjs
web/: fixtures.html  index.html  vite.embed.config.ts
web/embed-demo/: index.html
web/fixtures/: index.html
web/playground/: index.html
web/preview/: index.html
web/src/: base.css  fixtures.ts  main.ts  samples.ts  style.css  vite-env.d.ts  xsvg-view.ts  xsvg.ts
web/src/core/: artboards.ts  catalog.ts  compiler.ts  download.ts  editor.ts  preview.css  preview.ts  samples.ts  sourcemap.ts
web/src/dev/: fixtures.ts  index.css  index.ts
web/src/embed/: demo.ts  index.ts  xsvg-view.ts
web/src/playground/: main.ts  playground.css
web/src/preview/: main.ts
web/src/viewer/: inspector.ts  main.ts  pan-zoom.ts  viewer.css
web/viewer/: index.html
woff2/: .gitignore  Dockerfile  Makefile  README.md  build.sh  decompress_binding.cc
