[package]
name = "xsvg-cli"
version = "0.0.0"
edition = "2021"
description = "Headless (browser-free) xsvg compiler: xsvg in, plain SVG out. Native fonts via ttf-parser."
readme = "README.md"
publish = false

[[bin]]
name = "xsvg"
path = "src/main.rs"

[dependencies]
xsvg-core = { path = "../xsvg-core", features = ["compile"] }
ttf-parser = "0.25"
