[package]
name = "xsvg-core"
version = "0.0.0"
edition = "2021"
description = "xsvg shared types (pure Rust, no platform deps)."
publish = false

[dependencies]
gradient = { path = "../gradient" }
i_overlay = "7.0.2"
i_shape = "3.0.0"
kurbo = "0.13.1"
roxmltree = "0.20"

[dev-dependencies]
# test-only (does not affect the library or the wasm build)
serde_json = "1"
