[package]
name = "xsvg-wasm"
version = "0.0.0"
edition = "2021"
description = "wasm-bindgen entry point: compile(xsvg) -> svg. Browser adapter layer."
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
xsvg-core = { path = "../xsvg-core" }
xsvg-compile = { path = "../xsvg-compile" }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

# wasm-pack 0.12's bundled wasm-opt can't parse wasm emitted by recent Rust
# (reference-types feature). Disable it for a reliable build; upgrade wasm-pack
# (>= 0.13) to re-enable size optimization.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
